--- a/MakeupTestingTests/MakeupTestingTests.csproj
+++ b/MakeupTestingTests/MakeupTestingTests.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="122.0.6261.9400" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MakeupTesting\MakeupTestingPageObjects.csproj" />
+  </ItemGroup>
+
 </Project>
