--- a/MakeupTestingTests/MakeupTestingTests.csproj
+++ b/MakeupTestingTests/MakeupTestingTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.17.0" />
@@ -18,6 +19,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MakeupTesting\MakeupTestingPageObjects.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appconfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
