1. Add a Header 2. Add a DeliveryPage 3. Initialized web elements and created methods on DeliveryPage and Header 4. Add a test SelectDeliveryVariantByCity

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -9,6 +9,7 @@
   "category": "Макіяж",
   "categoryTitleText": "Декоративна косметика",
   "subCategory": "Очі",
+  "deliveryCity": " харків",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
   "subCategoryTitle": "Косметика для очей"
