1. Edited the test VerifyFilterProducts 2. Add a CartPage and ProductPage classes 3. Initialized web elements and created methods on CartPage and ProductPage 4. Add a tests VerifyAddProductToCart and VerifyDeleteProductFromCart

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -10,6 +10,7 @@
   "categoryTitleText": "Декоративна косметика",
   "subCategory": "Очі",
   "deliveryCity": " харків",
+  "productAddToCart": "Artdeco Hydra Lip Booster",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
   "subCategoryTitle": "Косметика для очей"
