1. Initialized web elements and created methods on CartPage 2. Refactoring 3. Add tests VerifyIncreaseQuantityProductInOrder, VerifyDecreaseQuantityProductInOrder, CalculateTotalProductPriceInOrder, VerifyPossibilityOfPostponingOrder

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -10,7 +10,8 @@
   "categoryTitleText": "Декоративна косметика",
   "subCategory": "Очі",
   "deliveryCity": " харків",
-  "productAddToCart": "Artdeco Hydra Lip Booster",
+  "productAddToCart1": "Artdeco Hydra Lip Booster",
+  "productAddToCart2": "Artdeco Lip Brilliance",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
   "subCategoryTitle": "Косметика для очей"
