--- a/MakeupTesting/MakeupTestingPageObjects.csproj
+++ b/MakeupTesting/MakeupTestingPageObjects.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="122.0.6261.9400" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MakeupTestingModels\MakeupTestingModels.csproj" />
+  </ItemGroup>
+
 </Project>
