1. Created ProductTests 2. Initialized web elements and created methods on ProductPage 3. Add a test VerifyPossibilityToSelectProductVariants

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -12,6 +12,7 @@
   "deliveryCity": " харків",
   "productAddToCart1": "Artdeco Hydra Lip Booster",
   "productAddToCart2": "Artdeco Lip Brilliance",
+  "productVariant": "10 - Brilliant Carmine",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
   "subCategoryTitle": "Косметика для очей"
