1. Add a Footer 2. Initialized web elements and created methods on Footer 3. Add tests NavigateToBeautyClub, NavigateToYouTube

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -13,6 +13,10 @@
   "productAddToCart1": "Artdeco Hydra Lip Booster",
   "productAddToCart2": "Artdeco Lip Brilliance",
   "productVariant": "10 - Brilliant Carmine",
+  "minPrice": "300",
+  "maxPrice": "400",
+  "linkBeautyClub": "MAKEUP Club - міжнародне ком'юніті про красу | MAKEUP Beauty Club",
+  "titleYouTube": "MAKEUP - YouTube",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
   "subCategoryTitle": "Косметика для очей"
