1. Initialized web elements and created methods on BrandsPage 2. Add a test VerifyBrandsVariantsText

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -17,6 +17,7 @@
   "maxPrice": "400",
   "linkBeautyClub": "MAKEUP Club - міжнародне ком'юніті про красу | MAKEUP Beauty Club",
   "titleYouTube": "MAKEUP - YouTube",
+  "brandVariant": "A",
   "hintText": "Ми доставляємо парфумерію і косметику  безкоштовно по Україні без передоплат та комісій за переказ грошей.",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
