--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -12,12 +12,15 @@
   "deliveryCity": " харків",
   "productAddToCart1": "Artdeco Hydra Lip Booster",
   "productAddToCart2": "Artdeco Lip Brilliance",
+  "productAddToCart3": "Maybelline New York Lash/Cils Sensational",
   "productVariant": "10 - Brilliant Carmine",
   "minPrice": "300",
   "maxPrice": "400",
   "linkBeautyClub": "MAKEUP Club - міжнародне ком'юніті про красу | MAKEUP Beauty Club",
   "titleYouTube": "MAKEUP - YouTube",
   "brandVariant": "A",
+  "variantSortBy": "вартістю",
+  "imgNumber": "3",
   "hintText": "Ми доставляємо парфумерію і косметику  безкоштовно по Україні без передоплат та комісій за переказ грошей.",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
