1. Initialized web elements and created methods 2. Add a test VerifyFollowLinkBreadCrumbs

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -21,6 +21,7 @@
   "brandVariant": "A",
   "variantSortBy": "вартістю",
   "imgNumber": "3",
+  "breadCrumbsTitle": "Туш для вій",
   "hintText": "Ми доставляємо парфумерію і косметику  безкоштовно по Україні без передоплат та комісій за переказ грошей.",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
