Edited methods and tests

--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -13,6 +13,7 @@
   "productAddToCart1": "Artdeco Hydra Lip Booster",
   "productAddToCart2": "Artdeco Lip Brilliance",
   "productAddToCart3": "Maybelline New York Lash/Cils Sensational",
+  "productAddToCart4": "Artdeco Hot Chili Lip Booster",
   "productVariant": "10 - Brilliant Carmine",
   "minPrice": "300",
   "maxPrice": "400",
@@ -21,7 +22,9 @@
   "brandVariant": "A",
   "variantSortBy": "вартістю",
   "imgNumber": "3",
+  "emailSubscription": "a",
   "breadCrumbsTitle": "Туш для вій",
+  "emptyCart": "Cart is Empty",
   "hintText": "Ми доставляємо парфумерію і косметику  безкоштовно по Україні без передоплат та комісій за переказ грошей.",
   "titleMainPageru": "MAKEUP - интернет-магазин косметики и парфюмерии №1",
   "titleMainPageUA": "MAKEUP - інтернет-магазин косметики та парфумерії №1",
