--- a/MakeupTestingTests/appconfig.json
+++ b/MakeupTestingTests/appconfig.json
@@ -17,7 +17,7 @@
   "productVariant": "10 - Brilliant Carmine",
   "minPrice": "300",
   "maxPrice": "400",
-  "linkBeautyClub": "MAKEUP Club - міжнародне ком'юніті про красу | MAKEUP Beauty Club",
+  "linkBeautyClub": "MAKEUP Club - міжнародне ком'юніті про красу | MAKEUP Club",
   "titleYouTube": "MAKEUP - YouTube",
   "brandVariant": "A",
   "variantSortBy": "вартістю",
